<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/jarjar"
    tools:context="com.zybooks.pizzaparty.MainActivity">

    <TextView
        android:id="@+id/numPeopleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numPeople"
        android:textSize="@dimen/label_text_size"
        android:labelFor="@id/num_attend_edit_text"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="number"
        android:ems="5"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/numPeopleText"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/how_hungry_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/howHungry"
        android:textSize="24sp"
        android:labelFor="@id/hungry_radio_group"
        app:layout_constraintTop_toBottomOf="@id/num_attend_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/how_hungry_text"
        app:layout_constraintLeft_toLeftOf="parent">
        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>
        <RadioButton
            android:id="@+id/medium_radio_button"
            android:text="@string/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>
        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:text="@string/ravenous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>
    </RadioGroup>

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:text="@string/default_total_pizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/hungry_radio_group"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick"
        android:backgroundTint="@color/pizza_red"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/num_pizzas_text_view"
        app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>